--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,12 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "firebase-admin": "^13.6.1",
     "google-it": "^1.6.4",
+    "groq-sdk": "^0.37.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
+    "openai": "^6.21.0",
     "p-limit": "^7.3.0"
   },
   "devDependencies": {
